--- a/.github/workflows/python-build.yml
+++ b/.github/workflows/python-build.yml
@@ -3,39 +3,26 @@ name: Python package
 on: release
 
 jobs:
-  build:
+  deploy:
 
     runs-on: ubuntu-latest
     environment: Publishing
-    strategy:
-      fail-fast: false
-      matrix:
-        python-version: ["3.10", "3.11"]
 
     steps:
     - uses: actions/checkout@v3
-    - name: Set up Python ${{ matrix.python-version }}
+    - name: Set up Python
       uses: actions/setup-python@v3
       with:
-        python-version: ${{ matrix.python-version }}
+        python-version: '3.x'
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        python -m pip install flake8 pytest
-        if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
-    - name: Lint with flake8
-      run: |
-        # stop the build if there are Python syntax errors or undefined names
-        flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
-        # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
-        flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
-    - name: Test with pytest
-      run: |
-        pip install .
-        pytest
+        pip install build
+    - name: Build package
+      run: python -m build
     - name: Upload to release
       uses: JasonEtco/upload-to-release@master
       with:
-        args: my-image.tar
+        args: dist/*
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
