--- a/.github/workflows/python-build.yml
+++ b/.github/workflows/python-build.yml
@@ -23,6 +23,6 @@ jobs:
     - name: Upload to release
       uses: JasonEtco/upload-to-release@master
       with:
-        args: dist/*
+        args: dist
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
