--- a/.github/workflows/python-release.yml
+++ b/.github/workflows/python-release.yml
@@ -10,6 +10,8 @@ jobs:
 
     runs-on: ubuntu-latest
     environment: Publishing
+    permissions:
+      contents: write
 
     steps:
     - uses: actions/checkout@v3
