--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,26 +1,23 @@
 [build-system]
-requires = ["setuptools", "numba"]
+requires = ["setuptools"]
 build-backend = "setuptools.build_meta"
 
 [project]
 name = "bfscale"
-version = "1.0.1"
+version = "2.0.0"
 authors = [
 	{ name="GroveDG", email="grovedgdev@gmail.com"}
 ]
 description = "Best fit image scaling"
 readme = "README.md"
-requires-python = ">=3.10"
+requires-python = ">=3.5"
 classifiers = [
 	"Programming Language :: Python :: 3",
 	"License :: OSI Approved :: MIT License",
 	"Operating System :: OS Independent",
 ]
 dependencies = [
-	'numba >= 0.50',
-	'numpy >= 1.0',
-	'imageio >= 2.10',
-	'pysimplegui >= 4.0'
+	'numpy >= 1.13',
 ]
 
 [project.urls]
